# cs4525-honours-project

./: .env.example  .gitignore  README.md  dataManipulation.py  environment.yml  evaluateData.py  finetuning.ipynb  fixSyntheticData.py  main.ipynb  main.py  prelim_eval.py  prompts.py  pyproject.toml  schema.py  setup.py  trainingData.ipynb
datasets/: DATASETS.md  annotated_testing_data.csv  confusionMatrix.csv  evaluationResults.csv  finetuned_inference_prompt3.csv  finetuning_test.csv  finetuning_train.csv  newErrorValues.csv  similarityResults.csv  testing_data.csv  training_Extraneous Statement.csv  training_Extraneous Statement_annotated.csv  training_Internal Inconsistency.csv  training_Omission.csv  training_Transcription Error.csv  training_errorFree.csv  training_errorFree_annotated.csv
datasets/inference/: falcon3_latest_inference.csv  falcon3_latest_inference_prompt2.csv  falcon3_latest_inference_prompt3.csv  mistral_latest_inference.csv  mistral_latest_inference_prompt2.csv  mistral_latest_inference_prompt3.csv  qwen2.5_latest_inference.csv  qwen2.5_latest_inference_prompt2.csv  qwen2.5_latest_inference_prompt3.csv
logs/: LOGS.md
manuals/: MAINTENANCE.md  USERMANUAL.md
modelfiles/: falcon3.Modelfile  mistral.Modelfile  qwen.Modelfile
scripts/: batch_falcon.sh  batch_mistral.sh  batch_prelim.sh  batch_qwen.sh  setup.sh
src/: dataManipulation.py  finetuning.ipynb  prelim_eval.ipynb  trainingData.ipynb
tests/: test_evaluateData.py  test_general.py  test_syntheticData.py
webview/: app.py
webview/templates/: generatedResponse.html  index.html
(+2 files in other folders)
