[project]
name = "honours-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "flask>=3.1.1",
    "huggingface-hub>=0.32.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "ollama>=0.5.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.0",
]
